[gd_scene load_steps=30 format=3 uid="uid://so2s8j7yu4n4"]

[ext_resource type="Script" path="res://nivel.gd" id="1_ek4ky"]
[ext_resource type="Texture2D" uid="uid://cfj8u2t71k5gk" path="res://assets/BorzaPocket_collisionwall.png" id="1_uoi6j"]
[ext_resource type="PackedScene" uid="uid://ooi1cvwg5w83" path="res://flipper.tscn" id="2_3n01g"]
[ext_resource type="Texture2D" uid="uid://ci8n115fv36wl" path="res://assets/BorzaPocket_greenScreen.png" id="2_6q3ko"]
[ext_resource type="Texture2D" uid="uid://mul8nif4a2wa" path="res://assets/BorzaPocket_Handheld.png" id="3_4p0xt"]
[ext_resource type="Script" path="res://ball.gd" id="3_pnvcf"]
[ext_resource type="Texture2D" uid="uid://dltao8xs0o1kj" path="res://assets/godoball.png" id="3_yarmt"]
[ext_resource type="PackedScene" uid="uid://vxicg412umbu" path="res://borza.tscn" id="7_fjhuu"]
[ext_resource type="Script" path="res://button.gd" id="8_vo146"]
[ext_resource type="Script" path="res://jugar_de_nuevo.gd" id="10_j64vl"]
[ext_resource type="Script" path="res://mensaje_game_over.gd" id="10_jojas"]
[ext_resource type="Script" path="res://remeras_conseguidas.gd" id="11_aaw8y"]
[ext_resource type="Script" path="res://out_of_level.gd" id="12_7jvcx"]
[ext_resource type="FontFile" uid="uid://b1jsksqkkxect" path="res://assets/fonts/PokemonGb-RAeo.ttf" id="12_fbvft"]
[ext_resource type="Texture2D" uid="uid://dc0qyo2c6wpp3" path="res://assets/Godot_icon.svg.png" id="12_hj7v5"]
[ext_resource type="AudioStream" uid="uid://ctcsvdkah44sp" path="res://assets/sounds/692928__superguyman__8-bit-circus.wav" id="16_ce2dp"]
[ext_resource type="AudioStream" uid="uid://bk038s22llnke" path="res://assets/sounds/450617__breviceps__8-bit-times-up.wav" id="17_ugxxv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5qugj"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_4tagw"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yntrr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpfl8"]
size = Vector2(23.8365, 39.2216)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1dyxt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_leml5"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.5182, 0.110942, 0.275135, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
expand_margin_left = 50.0
expand_margin_top = 10.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0
shadow_color = Color(0.443137, 0.121569, 0.25098, 1)
shadow_size = 1
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs5pq"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.443137, 0.121569, 0.25098, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
expand_margin_left = 50.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0
shadow_color = Color(0.443137, 0.121569, 0.25098, 1)
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2ax0"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.662745, 0.160784, 0.360784, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
expand_margin_left = 50.0
expand_margin_top = 10.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0
shadow_color = Color(0.443137, 0.121569, 0.25098, 1)
shadow_size = 1
shadow_offset = Vector2(0, 10)

[sub_resource type="Shortcut" id="Shortcut_de1oi"]

[sub_resource type="Theme" id="Theme_g7ptd"]
Label/fonts/font = ExtResource("12_fbvft")
LinkButton/fonts/font = ExtResource("12_fbvft")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hyui3"]

[sub_resource type="LabelSettings" id="LabelSettings_xecng"]
font = ExtResource("12_fbvft")
font_size = 40
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ek4ky")

[node name="Background" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_4p0xt")
centered = false

[node name="Screen" type="Node2D" parent="."]
position = Vector2(331, -3)

[node name="BorzaPocketGreenScreen" type="Sprite2D" parent="Screen"]
position = Vector2(306.5, 362)
scale = Vector2(1.06641, 1.06111)
texture = ExtResource("2_6q3ko")

[node name="Ball" type="RigidBody2D" parent="Screen"]
unique_name_in_owner = true
position = Vector2(659, 365)
collision_layer = 9
mass = 0.2
physics_material_override = SubResource("PhysicsMaterial_5qugj")
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("3_pnvcf")

[node name="Sprite2D" type="Sprite2D" parent="Screen/Ball"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_yarmt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen/Ball"]
shape = SubResource("CircleShape2D_4tagw")

[node name="StaticBody2D" type="StaticBody2D" parent="Screen"]
position = Vector2(-13, -29)
scale = Vector2(4.2, 4.2)
metadata/_edit_lock_ = true

[node name="BorzaPocketCollisionwall" type="Sprite2D" parent="Screen/StaticBody2D"]
position = Vector2(77.75, 78.625)
scale = Vector2(0.262, 0.262)
texture = ExtResource("1_uoi6j")

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Screen/StaticBody2D"]
position = Vector2(77.75, 78.625)
scale = Vector2(0.262, 0.262)
polygon = PackedVector2Array(-259, -249, -259, -247.9, -264.2, -247, -268.3, -247, -277.3, -242, -279.4, -242, -291.4, -230, -292.6, -230, -298.6, -217, -299.9, -217, -300.9, -205, -302, -205, -302, 204.2, -300, 210, -300, 214.3, -298, 217.3, -298, 220.3, -295, 224.3, -295, 226.4, -283, 238.4, -283, 239.7, -280, 240.6, -280, 241.7, -265, 246.6, -265, 248, -259, 248, -259, 249, -78, 248, -76, 248, -77, 197, -77, 195.4, -244.8, 114, -246.6, 114, -257.6, 103, -258.4, 103, -263.4, 92, -264.2, 92, -265.2, 87, -266.2, 87, -269, 72.8, -269, -153.7, -265, -168.9, -265, -171.7, -259, -181.7, -259, -183.6, -252, -190.6, -252, -191.4, -248, -193.4, -248, -194.4, -241, -197.3, -241, -198.2, -236, -199.2, -236, -200.2, -225, -202.2, -225, -203, -218, -203, -218, -204, 219.7, -204, 234.9, -200, 237.8, -200, 245.7, -195, 247.4, -195, 248.4, -193, 250.6, -193, 258.6, -184, 259.4, -184, 264.4, -173, 265.2, -173, 270, -152.8, 270, 46.4, 271.6, 48, 274.2, 48, 293.2, 39, 296.3, 39, 300.3, 36, 302, 36, 302, -204.1, 300, -211.3, 300, -216.3, 295, -224.2, 295, -226.4, 287, -235.4, 287, -236.6, 280, -240.7, 280, -241.7, 272, -244.7, 272, -246, 269, -246, 269, -246.9, 259, -248, 259, -249)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Screen/StaticBody2D"]
position = Vector2(77.75, 78.625)
scale = Vector2(0.262, 0.262)
polygon = PackedVector2Array(297, 92.6, 297, 94.4, 295.8, 95, 292.6, 95, 290.6, 97, 287.8, 97, 273.8, 104, 270.6, 104, 268.6, 106, 265.6, 106, 263.6, 108, 260.6, 108, 258.6, 110, 255.6, 110, 253.6, 112, 250.6, 112, 248.6, 114, 245.7, 114, 236.7, 119, 233.8, 119, 205, 133.4, 205, 134, 202.8, 134, 170, 150.4, 170, 151, 167.8, 151, 77.8, 196, 76, 196, 77, 247, 77, 249, 258.2, 249, 270, 245, 273.3, 245, 277.3, 242, 279.6, 242, 280.6, 240, 282.4, 240, 291.4, 230, 292.6, 230, 295.6, 224, 296.8, 224, 299.8, 212, 300.8, 212, 302, 205.1, 302, 94.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen/StaticBody2D"]
position = Vector2(168.333, 109.286)
rotation = -0.364003
shape = SubResource("RectangleShape2D_yntrr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Screen/StaticBody2D"]
position = Vector2(173.595, 80.7495)
rotation = -0.364003
shape = SubResource("RectangleShape2D_hpfl8")

[node name="Flipper" parent="Screen" instance=ExtResource("2_3n01g")]
unique_name_in_owner = true
position = Vector2(226, 532)
rotation = 0.0
constant_linear_velocity = Vector2(0, -1500)
rotation_when_toggled = -0.959931

[node name="Flipper2" parent="Screen" instance=ExtResource("2_3n01g")]
unique_name_in_owner = true
position = Vector2(406, 532)
rotation = 3.14159
scale = Vector2(1, -1)
constant_linear_velocity = Vector2(0, -1500)
rotation_when_toggled = 4.10152

[node name="Borza" parent="Screen" node_paths=PackedStringArray("positions") instance=ExtResource("7_fjhuu")]
unique_name_in_owner = true
position = Vector2(441, 204)
collision_mask = 0
positions = [NodePath("../BorzaPositions/Marker2D"), NodePath("../BorzaPositions/Marker2D2"), NodePath("../BorzaPositions/Marker2D3"), NodePath("../BorzaPositions/Marker2D4"), NodePath("../BorzaPositions/Marker2D5"), NodePath("../BorzaPositions/Marker2D6")]

[node name="BorzaPositions" type="Node2D" parent="Screen"]

[node name="Marker2D" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(69, 133)

[node name="Marker2D2" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(311, 133)

[node name="Marker2D3" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(533, 133)

[node name="Marker2D4" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(69, 258)

[node name="Marker2D5" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(311, 258)

[node name="Marker2D6" type="Marker2D" parent="Screen/BorzaPositions"]
position = Vector2(533, 258)

[node name="A" type="Button" parent="Screen" node_paths=PackedStringArray("flipper")]
z_index = 1
offset_left = -234.0
offset_top = 403.0
offset_right = -168.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dyxt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_leml5")
theme_override_styles/hover = SubResource("StyleBoxFlat_leml5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5pq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x2ax0")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ax0")
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_de1oi")
text = "A
"
script = ExtResource("8_vo146")
action = "flipper_left"
flipper = NodePath("../Flipper")

[node name="D" type="Button" parent="Screen" node_paths=PackedStringArray("flipper")]
z_index = 1
offset_left = 781.0
offset_top = 403.0
offset_right = 847.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dyxt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_leml5")
theme_override_styles/hover = SubResource("StyleBoxFlat_leml5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5pq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x2ax0")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ax0")
toggle_mode = true
action_mode = 0
text = "D"
script = ExtResource("8_vo146")
action = "flipper_right"
flipper = NodePath("../Flipper2")

[node name="MensajeGameOver" type="RichTextLabel" parent="Screen"]
unique_name_in_owner = true
z_index = 3
clip_contents = false
offset_left = 101.0
offset_top = 291.0
offset_right = 536.0
offset_bottom = 384.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.541176, 0.839216, 0.0470588, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("12_fbvft")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]¡¡Conseguiste [wave]18[/wave] 
remeras!![/center]"
fit_content = true
script = ExtResource("10_jojas")

[node name="JugarDeNuevo" type="Button" parent="Screen"]
unique_name_in_owner = true
z_index = 1
offset_left = 246.0
offset_top = 609.0
offset_right = 391.0
offset_bottom = 650.0
pivot_offset = Vector2(66, 21)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dyxt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_leml5")
theme_override_styles/hover = SubResource("StyleBoxFlat_leml5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5pq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x2ax0")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ax0")
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_de1oi")
text = "Jugar de nuevo"
script = ExtResource("10_j64vl")

[node name="Empezar" type="Button" parent="Screen"]
unique_name_in_owner = true
z_index = 1
offset_left = 246.0
offset_top = 609.0
offset_right = 391.0
offset_bottom = 650.0
pivot_offset = Vector2(66, 21)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dyxt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_leml5")
theme_override_styles/hover = SubResource("StyleBoxFlat_leml5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5pq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x2ax0")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ax0")
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_de1oi")
text = "Empezar"

[node name="LinksParaCompartir" type="VBoxContainer" parent="Screen"]
unique_name_in_owner = true
offset_left = 161.0
offset_top = 391.0
offset_right = 481.0
offset_bottom = 441.0
theme = SubResource("Theme_g7ptd")
theme_override_constants/separation = 15

[node name="BlueSkyShare" type="LinkButton" parent="Screen/LinksParaCompartir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Compartir en BlueSky"
uri = "https://bsky.app/intent/compose?text="

[node name="TwitterShare" type="LinkButton" parent="Screen/LinksParaCompartir"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Compartir en Twitter"
uri = "https://twitter.com/intent/tweet?text="

[node name="OutOfLevel" type="Area2D" parent="Screen"]
position = Vector2(42, 611)
collision_layer = 0
collision_mask = 8
script = ExtResource("12_7jvcx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen/OutOfLevel"]
position = Vector2(271, 9)
shape = SubResource("WorldBoundaryShape2D_hyui3")

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = 778.0
offset_top = 508.0
offset_right = 938.0
offset_bottom = 549.0
text = "0:00"
label_settings = SubResource("LabelSettings_xecng")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
one_shot = true

[node name="RemerasConseguidas" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(376, 51)
script = ExtResource("11_aaw8y")

[node name="Sprite2D" type="Sprite2D" parent="RemerasConseguidas"]
visible = false
position = Vector2(2.38419e-07, -4)
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_hj7v5")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="RemerasConseguidas/Sprite2D"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(-4.5, -4.5)
scale = Vector2(1.1, 1.1)
texture = ExtResource("12_hj7v5")
centered = false

[node name="Credits" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_g7ptd")

[node name="LinkButton" type="LinkButton" parent="Credits"]
layout_mode = 0
offset_left = 1032.0
offset_top = 630.0
offset_right = 1400.0
offset_bottom = 665.0
theme_override_font_sizes/font_size = 10
text = "Fuente de fontspace.com"
uri = "https://www.fontspace.com/pokemon-gb-font-f9621"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ce2dp")

[node name="Finish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_ugxxv")

[connection signal="ball_out_of_bounds" from="Screen/OutOfLevel" to="." method="_on_out_of_level_ball_out_of_bounds"]
